<resources>
    <string name="app_name">Pedia</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="pedia_division">Pedia Division</string>
    <string name="brezu">Brezu</string>
    <string name="brezu_video">Brezu (Video)</string>
    <string name="clarithromycin">Clarithromycin</string>
    <string name="dibher">Dibencozide Heraclene</string>
    <string name="dibher1mg">Dibencozide Heraclene 1mg</string>
    <string name="kidzkit">Kidz Kit</string>
    <string name="montemax">Montemax</string>
    <string name="natravox">Natravox</string>
    <string name="corpvideo">Corporate Video</string>
    <string name="brezu1_title">Longer Duration of Action vs. Salbunation</string>
        <string name="brezu1_text1">
            Subjects with the protection of EIA after medication using FEV1 as Parameter \n
            (n = 26)
        </string>
    <string name="brezu1_square1">Inhaled Procaterol</string>
    <string name="brezu1_square2">Oral Procaterol</string>
    <string name="brezu1_square3">Inhaled Salbutamol</string>
        <string name="brezu1_pvalue">
            <b>P value</b>\n
            5.0 hr = 0.0000001*\n
            9.5 hr = 0.00000043*\n
        </string>
        <string name="brezu1_text2">
            Both inhaled and oral procaterol provide a similar degree and duration of protection against EIA (9.5hrs)
        </string>
        <string name="brezu1_text3">
            Chu, J, Tuazon OA et al. A comparison of the protective efficacy of procaterol aerosol and
            syrup in exercise-induced asthma. Am J Resp and Critical Care Med 2000; 161 (3) A345
        </string>
    <string name="brezu2_title">Prevents Nocturnal Asthma</string>
        <string name="brezu2_text1">
            \"&#8230;that procaterol significantly inhibited the reduction in pulmonary flow rates early in the morning hours, as well as significantly decreasing the amount of wheezing measured at the time.\"
        </string>
    <string name="brezu3_title">Faster Onset of Action vs. Salbutamol</string>
    <string name="brezu3_text1">Comparative study on Bronchadilating Effects of Procaterol and Salbutamol</string>
    <string name="brezu3_choice1">Salbutamol</string>
    <string name="brezu3_choice2">Procaterol</string>
    <string name="brezu3_value">Salbutamol (n = 25)\nProcaterol (n = 25)</string>
    <string name="brezu4_title">No Drug Tolerance</string>
        <string name="brezu4_text1">
            The effectiveness of Procaterol was maintained through 3 months of treatment unlike Salbutamol, which appeared to decrease.
        </string>
    <string name="brezu4_caption1">AFTER 1 MONTH</string>
    <string name="brezu4_caption2">AFTER 3 MONTHS</string>
        <string name="brezu4_text2">
            Comparison of mean percent of FEV1 from predose values during 8hr. postdose between: \n
            Group I: received procaterol 0.05 mg twice daily for 2wk followed by 0.10mg twice daily for 10wk. \n
            Group II: received Salbutamol 2mg three times a day for 2wk followed by 4mg three times aday for 10wk.
        </string>
    <string name="clar_caps">CLARITHROMYCIN</string>
    <string name="clar1_title">Clarithro - Natrapharm</string>
        <string name="clar1_dosage">
            250mg / 5mL suspension\n
            125mg / 5mL suspension
        </string>
    <string name="clar2_title">Indications</string>
        <string name="clar2_text1">&#8226; LOWER RESPIRATORY TRACT INFECTION (E.G. BRONCHITIS, PNEUMONIA)
            \n&#8226; UPPER RESPIRATORY TRACT INFECTION (E.G. STREPTOCOCCAL PHARYNGITIS)
            \n&#8226; SKIN AND SKIN STRUCTURE INFECTIONS (E.G. IMPETIGO, FOLLICULITIS, CELLULITIS)
            \n&#8226; DISSEMINATED OR LOCALIZED MYCOBACTERIAL INFECTIONS DUE TO <i>MYCOBACTERIUM</i> OR <i>MYCOBACTERIUM INTRA CELLULARE</i>
            \n&#8226; LOCALIZED INFECTIONS DUE TO <i>MYCOBACTERIUM CHELONAE, MYCOBACTERIUM FORTUITUIM,</i> OR <i>MYCOBACTERIUM KANSAII</i>
        </string>
        <string name="clar3_title">
            Dosage in Patients with Renal Impairment
        </string>
        <string name="clar3_text1">
            In children with creatinine clearance with less than 30mL min., the dosage of CLARITHROMYCIN should be reduced by one-half.
            250mg once daily or 250mg twice on more severe infections. Dosage should not be continued beyond 14 days in these patients.
        </string>
        <string name="clar4_title">
            Dosage in Patients with Mycobacterial Infection
        </string>
        <string name="clar4_text1">
            In children with sisseminated or localized mycobacterial infection (M. Avium, M. Intracellulare, M. Chelonae,
            M. Fortiumtum, M. Kansasii), the recommended dose is 15 to 30 mg/kg CLARITHROMTHYCON per day divided in to 2 doses.
        </string>
        <string name="clar5_text1">
            The combination of a beta-lactam plus a macrolide could be suggested in the
            first-line treatment of CAp in the immunocompetent children aged 2 to 5 years old.
        </string>
        <string name="clar5_text2">
            Esposito et al. Characteristics of Streptococcus pneumonia and Atypical Bacterial Infection
            in Children 2 to 5 years of age with Community-Acquired Pneumonia.\n
            Clinical Diseases 2002; \n
            35:1345-52
        </string>
        <string name="clar6_text1">
            Primary combination treatment with MACROLIDES in the areas where there is a high prevalence of atypical organism.
        </string>
        <string name="clar6_text2">
            Chetty K. Thomson AH. Management of Community-Acquired Pneumonia in Children.\n
            Paediatr Drugs.\n
            2007:9(6)-401-11
        </string>
        <string name="clar7_text1">
            Children &lt; 8kg or &lt; 18lbs. should be dosed on a per kg or per lb. basis (approx. 7,5 mg/kg BID or 3.4 mg/lb BIF)
        </string>
    <string name="dibher_boxname">Dibencozide</string>
    <string name="dibher_medname">Heraclene </string>
    <string name="dibher1_title">For Picky and Fussy Eaters</string>
    <string name="dibher1_subtitle">Children with little or no appetite</string>
    <string name="dibher1_text1">The only protein building, non-sedating appetite stimulant</string>
    <string name="dibher2_title">Protein Building Process</string>
        <string name="dibher2_text1">
            Acts as the key coenzyme in the activation of incorporation of amino to form protein molecules
        </string>
        <string name="dibher2_text2">
            Contributes to accelerated formation and repair of bady tissues
        </string>
        <string name="dibher2_text3">
            Facilitates optimum utilization of dietary protein intake
        </string>
    <string name="dibher3_title">Appetite Stimulant</string>
        <string name="dibher3_text1">
            As amino acid incorporation is accelerated, more polypeptide chains are formed in to bigger protein molecules,
            thus, the artificial lack of amino acid in the amino acid pool. This results to stimulation of appetite.
        </string>
        <string name="dibher3_text2">
            \"There is a marked effect upon appetite\" after 7 to 31 days of treatment with Heraclene.
        </string>
        <string name="dibher4_check1">
            Non-Sedating\n
            Will not cause drowsiness
        </string>
        <string name="dibher4_check2">
            Excellent Tolerance\n
            No side effects\n
            No contraindications
        </string>
        <string name="dibher4_check3">
            Convenient Capsule Form\n
            Tasteless and Odorless\n
            Child will hardly notice medicine
        </string>
    <string name="dibher5_title1">Prescription Information</string>
        <string name="dibher5_text1">
            Formulation\n
            Each Capsule contains Dibencozide - 1mg
        </string>
    <string name="dibher5_title2">Actions</string>
        <string name="dibher5_text2">
            Dibencozide increases the protein \"efficiency coefficient\" (i.e. the percentage of bound nutrition
            for protein build up in the body compared to ingested nitrogen with food intake). The initial sign
            of effectiveness is manisfested by a marked increase in appetite.
        </string>
        <string name="dibher5_text3">
            Thus, DIBENCOZIDE
            1. Facilitates optimum utilization of dietary intake\n
            2. Contributes to the formation and repair of body tissue\n
            3. Stimulates appetite
        </string>
    <string name="dibher6_title1">Indications</string>
        <string name="dibher6_text1">
            &#8226; Poor appetite\n
            &#8226; Adjuvant to treatment of luberculous and other chronic ailments\n
            &#8226; Convalescense  from acute infection or surgery\n
            &#8226; Faulty nutrition in older people\n
            &#8226; Premature babies, Low birth weight. Retardted growth
        </string>
    <string name="dibher6_title2">Dosage</string>
        <string name="dibher6_text2">
            Premature babies / infants:
            1 Capsule daily (Capsule may be opened. Odorless and tasteless powder can be mixed in to milk or juice.)
            Children and Adolescents:
            2-3 Capsules daily (3 capsules daily or as prescribed by Physician)
            Adults:
            2-3 Capsules daily (3 capsules daily or as prescribed by Physician)
        </string>
    <string name="dibher7_title1">Cautions</string>
        <string name="dibher7_text1">
            Food, Drugs, Devices and Cosmetics Act prohibits dispensing without prescription.
        </string>
    <string name="dibher7_title2">Presentation</string>
    <string name="dibher7_text2">Box of 100 capsules</string>
    <string name="dibher7_title3">Reference</string>
        <string name="dibher7_text3">
            1. F. Gillot and J.L. Condudal. Clinical Trial of a Non-Steroidical an Anaboloc drugs in Pediatrics L. Quest
            Medical 25 May 1968 11-899-902 \n
            2. P. Debray, Cobamide-Coenzyme in Pediatric Practice: Medicine Infantile, 1966.
        </string>
    <string name="dibher1mg1_caption">For the most delicate of patients&#8230;</string>
    <string name="dibher1mg_subtitle">1mg Capsule</string>
    <string name="dibher1mg1_title">Promotes Weight, Promotes Health</string>
        <string name="dibher1mg1_subtitle">
            The only protein-building appetite stimulant for low birth weight and premature babies.
        </string>
    <string name="dibher1mg2_title">The only protein-building appetite stimulant</string>
    <string name="dibher1mg2_subtitle">Proven effective, proven safe for low birth weight babies</string>
        <string name="dibher1mg2_text1">
            &#8226; Prospective, double-blind, randomized, controlled trial to evaluate efficacy add safety of
                    Dibencozide in low birth weight infants &lt; 35 weeks age of gestation\n
            &#8226; Primary objective: to determine difference in mean weight gain between infants given preterm milk formula with placebo
        </string>
    <string name="dibher1mg2_result">Result:</string>
        <string name="dibher1mg2_text2">
            &#8226; Dibencozide group had statistically significant 4g/day difference in mean weight gain compared to placebo\n
            &#8226; Dibencozide group had shorter duration of intervention compared to placebo (13.2 days + vs. 15.7 days + 9.9)\n
            &#8226; Risk Ratio and NNT for sepsis, pneumonia, necrotizing enterocolitis and death: benefit towards dibencozide
        </string>
    <string name="dibher1mg3_title">Protein Builder</string>
    <string name="dibher1mg3_subtitle">The Protein Building Process</string>
</resources>