<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_brezu1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slider_bg"
    tools:context="app.rocketship.pedia.pedia.slides.Brezu1Fragment">

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/brezu1_mainlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center">

        <TextView
            android:id="@+id/brezu1_title"
            app:layout_widthPercent="90%"
            app:layout_heightPercent="10%"
            app:layout_marginTopPercent="3%"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/brezu1_title"
            android:textColor="#2d2a20"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/brezu1_text1"
            app:layout_widthPercent="80%"
            app:layout_heightPercent="12%"
            app:layout_marginTopPercent="4%"
            app:layout_marginLeftPercent="5%"
            android:padding="10dp"
            android:layout_below="@id/brezu1_title"
            android:gravity="center"
            android:keepScreenOn="true"
            android:text="@string/brezu1_text1"
            android:background="@drawable/brezu_round"
            android:textSize="25sp"
            android:layout_gravity="center" />

        <android.support.percent.PercentRelativeLayout
            app:layout_widthPercent="80%"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/brezu1_text1"
            android:gravity="start"
            app:layout_marginTopPercent="2%"
            app:layout_marginLeftPercent="5%">

            <ImageView
                android:id="@+id/brezu_bar1"
                app:layout_widthPercent="60%"
                app:layout_heightPercent="52%"
                android:background="@drawable/brezu_round"
                android:padding="10dp"
                android:src="@drawable/bar1"
                tools:ignore="ContentDescription" />

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/brezu1_middlelayout"
                app:layout_widthPercent="40%"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_toEndOf="@id/brezu_bar1"
                app:layout_marginLeftPercent="1%">

                <LinearLayout
                    android:id="@+id/brezu1_linearlist"
                    android:layout_width="match_parent"
                    app:layout_heightPercent="22%"
                    android:background="@drawable/brezu_round"
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/brezu1_square1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brezu1_square1"
                        android:drawableStart="@drawable/square_yellow"
                        android:drawablePadding="10dp"
                        android:textSize="25sp"
                        android:layout_marginStart="50dp"/>

                    <TextView
                        android:id="@+id/brezu1_square2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brezu1_square2"
                        android:drawableStart="@drawable/square_blue"
                        android:drawablePadding="10dp"
                        android:textSize="25sp"
                        android:layout_marginStart="50dp"/>

                    <TextView
                        android:id="@+id/brezu1_square3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brezu1_square3"
                        android:drawableStart="@drawable/square_red"
                        android:drawablePadding="10dp"
                        android:textSize="25sp"
                        android:layout_marginStart="50dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/brezu1_pvalue"
                    android:layout_width="match_parent"
                    app:layout_heightPercent="28%"
                    android:layout_below="@id/brezu1_linearlist"
                    android:background="@drawable/brezu_round"
                    android:text="@string/brezu1_pvalue"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:padding="10dp"
                    app:layout_marginTopPercent="2%"/>

            </android.support.percent.PercentRelativeLayout>

            <TextView
                android:id="@+id/brezu1_text2"
                android:layout_width="match_parent"
                app:layout_heightPercent="10%"
                android:layout_below="@id/brezu1_middlelayout"
                android:background="@drawable/brezu_round"
                android:text="@string/brezu1_text2"
                android:textSize="19sp"
                android:gravity="center"
                android:padding="10dp"
                app:layout_marginTopPercent="2%"/>

            <TextView
                android:text="@string/brezu1_text3"
                android:layout_width="match_parent"
                app:layout_heightPercent="12%"
                app:layout_marginTopPercent="2%"
                android:layout_below="@id/brezu1_text2"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:id="@+id/textView"
                android:background="@drawable/brezu_round"
                android:textSize="20sp"
                android:padding="5dp"/>

        </android.support.percent.PercentRelativeLayout>

    </android.support.percent.PercentRelativeLayout>

</android.support.percent.PercentRelativeLayout>
